 - Added shortcuts: PgDn=Spc PgUp=b Back=BackSpace|, Forw=Shift+Backspace|.
 - Made a cleanup in cache's parse header code.
   Patch: place, Jorge Arellano Cid
+- Fixed a va_list-related SEGFAULT on 64bit-arch in dStr_vsprintfa().
   Added const declarations in html parser.
   Patch: Vincent Thomasset
+- Fixed void to int conversions for 64bit-arch.
   Patch: Jorge Arellano Cid, higuita
+- Added a strndup() replacement in dw2
   Patch: Alexander Becher, Johannes Hofmann, Jorge Arellano Cid
+- Fixed calcHashValue() to only return non-negative numbers (was SEGFAULT).
 - Improved scrolling performance on large pages by copying screen data
    instead of rendering.
 - Updated configure.in to check only for fltk2-config.
 - Implemented drag-scrolling with the mouse's middle button.
 - Disabled double buffering (good for debugging redraws).
 - Switched dns.c from gethostbyname* to getaddrinfo (& removed libc5 code).
 - Made "New browser window" inherit the panel style of its parent.
 - Made TopGroup a PackedGroup, simplifying UI code and removing workarounds.
 - Added a redraw(DAMAGE_HIGHLIGHT) call to Back, Forw and Stop buttons.
 - Fixed a segfault bug when closing a bw under active networking.
   Patches: Johannes Hofmann
+- Made progress bars resize automatically.
   Patches: Johannes Hofmann, Jorge Arellano Cid
+- Improved FLTK library detection at configure time.
   Patch: Frank Gevaerts
+- Bound Ctrl-R to reload.
 - Made dialogs use font_factor (e.g. view source).
 - Implemented the SELECT element in FORMS!
   Patches: Jeremy Henty
+- Added int32_t, EAI_NODATA and iconv tests for FreeBSD.
   Patch: Thomas-Martin Seck

 TODO:

 - test no_proxy (set a list in dillorc).

-----------------------------------------------------------------------------


0.8.5-pre-dw-redesign-1 [internal]
- Prototype

dillo-0.8.3-pre-dw-redesign-3 [Aug 30, 2004]
 - * Fixed bug GtkDwViewport, which caused some redraws to be ignored.
   * Added GdkDwPreview.
   Patches: Sebastian Geerken
